sed -i 's|http://code.jquery.com|//code.jquery.com|' dev/*/*.html

--- a/dev/BBN2/DST.html
+++ b/dev/BBN2/DST.html
@@ -9,7 +9,7 @@
 
     <link href="css/lib/bootstrap.min.css" rel="stylesheet" />
     <link id="ui_css" href="jQueryUI/jquery-ui_original.css" rel="stylesheet" />
-    <link href="http://code.jquery.com/ui/1.12.1/themes/start/jquery-ui.css" rel="stylesheet" >
+    <link href="//code.jquery.com/ui/1.12.1/themes/start/jquery-ui.css" rel="stylesheet" >
 
     <link id="dialog_css" href="css/dialog.css" rel="stylesheet" />
     <link href="css/DST.css" rel="stylesheet" />
@@ -17,10 +17,10 @@
     <link href="css/footer.css" rel="stylesheet" />
 </head>
 <body>
-    <script src="http://code.jquery.com/jquery-1.12.4.min.js"
+    <script src="//code.jquery.com/jquery-1.12.4.min.js"
             integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
             crossorigin="anonymous"></script>
-    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.createjs.com/createjs-2015.05.21.min.js"></script>
     <script src="https://www.google.com/jsapi"></script>
 
