--- a/dev/MCA2/DST.html
+++ b/dev/MCA2/DST.html
@@ -8,7 +8,7 @@
     <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">-->
     <link href="css/lib/bootstrap.min.css" rel="stylesheet" />
     <!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">-->
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/start/jquery-ui.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/start/jquery-ui.css">
 
     <link href="css/body.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
@@ -22,9 +22,9 @@
     
 </head>
 <body >
-    <script src="http://code.jquery.com/jquery-1.11.3.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.3.js"></script>
     <!--<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>-->
-    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://code.createjs.com/createjs-2015.05.21.min.js"></script>
 
     <script src="https://www.google.com/jsapi"></script>
