For the tabs to work, these can't refer to the page in question

--- a/gulf-of-cadiz-modeloutput.html
+++ b/gulf-of-cadiz-modeloutput.html
@@ -57,9 +57,9 @@
 
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
-  <li role="presentation" class="active"><a loaded="true" href="gulf-of-cadiz-modeloutput.html#TAC_fija_extendida_final_red" aria-controls="TAC_fija_extendida_final_red" role="tab" data-toggle="tab">TAC fija</a></li>
-    <li role="presentation"><a href="gulf-of-cadiz-modeloutput.html#TAC_fija_vs_adaptativa_final_red" aria-controls="TAC_fija_vs_adaptativa_final_red" role="tab" data-toggle="tab">TAC adaptativa vs TAC fija</a></li>
-    <li role="presentation"><a href="gulf-of-cadiz-modeloutput.html#TAC_fija_vs_adaptativa_insurance_final_red" aria-controls="TAC_fija_vs_adaptativa_insurance_final_red" role="tab" data-toggle="tab">Con seguro: TAC fija vs Adaptativa</a></li>
+  <li role="presentation" class="active"><a loaded="true" href="#TAC_fija_extendida_final_red" aria-controls="TAC_fija_extendida_final_red" role="tab" data-toggle="tab">TAC fija</a></li>
+    <li role="presentation"><a href="#TAC_fija_vs_adaptativa_final_red" aria-controls="TAC_fija_vs_adaptativa_final_red" role="tab" data-toggle="tab">TAC adaptativa vs TAC fija</a></li>
+    <li role="presentation"><a href="#TAC_fija_vs_adaptativa_insurance_final_red" aria-controls="TAC_fija_vs_adaptativa_insurance_final_red" role="tab" data-toggle="tab">Con seguro: TAC fija vs Adaptativa</a></li>
   </ul>
 
   <!-- Tab panes -->
