Correct MCA links so FileIO.js can find the appropriate JSON file again

--- a/baltic-sea.html
+++ b/baltic-sea.html
@@ -132,14 +132,14 @@
 			</div>
 			<div class="col-sm-6">
 				
-				<a href="dev/BBN2/DST.html?bbn=true&amp;model=baltic.html"><h3>Bayesian Belief Network</h3>
+				<a href="dev/BBN2/DST.html?bbn=true&model=baltic"><h3>Bayesian Belief Network</h3>
 				<img src="img/balticsea-bbn.png" class="img-thumbnail img-responsive center-block"></a>
-				<a href="dev/BBN2/DST.html?bbn=true&amp;model=baltic_a.html"><h4>BBN Stakeholder A</h4>
-				<a href="dev/BBN2/DST.html?bbn=true&amp;model=baltic_b.html"><h4>BBN Stakeholder B</h4>
-				<a href="dev/BBN2/DST.html?bbn=true&amp;model=baltic_c.html"><h4>BBN Stakeholder C</h4>
-				<a href="dev/MCA2/DST.html?model=baltic_a.html"><h4>MCA Stakeholder A</h4>
-				<a href="dev/MCA2/DST.html?model=baltic_b.html"><h4>MCA Stakeholder B</h4>
-				<a href="dev/MCA2/DST.html?model=baltic_c.html"><h4>MCA Stakeholder C</h4>
+				<a href="dev/BBN2/DST.html?bbn=true&model=baltic_a"><h4>BBN Stakeholder A</h4>
+				<a href="dev/BBN2/DST.html?bbn=true&model=baltic_b"><h4>BBN Stakeholder B</h4>
+				<a href="dev/BBN2/DST.html?bbn=true&model=baltic_c"><h4>BBN Stakeholder C</h4>
+				<a href="dev/MCA2/DST.html?model=baltic_a"><h4>MCA Stakeholder A</h4>
+				<a href="dev/MCA2/DST.html?model=baltic_b"><h4>MCA Stakeholder B</h4>
+				<a href="dev/MCA2/DST.html?model=baltic_c"><h4>MCA Stakeholder C</h4>
 				
 				<a href="baltic-sea/scatter-4.html"><h3>Scenario Model output</h3>
 				<p><img src="img/baltic_timeline.PNG" class="img-thumbnail img-responsive center-block"></p></a>
