--- a/strait-of-sicily.html
+++ b/strait-of-sicily.html
@@ -112,8 +112,8 @@ The assessment of the status of the stocks in the region is carried out both by 
 			</div>
 			<div class="col-sm-6">
 				<a href="dev/MCA2/DST.html"><h3>Multi-Criteria Analysis</h3>				<p><img src="img/sicily_analysis.png" class="img-thumbnail img-responsive center-block"></p></a>
-				<a href="dev/MCA2/DST.html?model=sicily2020_ok.html">MCA using Gadget output 2020</a>
-				<a href="dev/MCA2/DST.html?model=sicily2030_ok.html">MCA using Gadget output 2030</a>
+				<a href="dev/MCA2/DST.html?model=sicily2020_ok">MCA using Gadget output 2020</a>
+				<a href="dev/MCA2/DST.html?model=sicily2030_ok">MCA using Gadget output 2030</a>
 				<a href="strait-of-sicily/scatter-beta-2.html"><h3>Scenario Model output</h3>
 				<p><img src="img/Sicily_Model_Output.PNG" class="img-thumbnail img-responsive center-block"></p></a>
 				
