--- a/west-coast-of-scotland.html
+++ b/west-coast-of-scotland.html
@@ -81,9 +81,9 @@
 			<div class="col-sm-6">
 				<a href="dev/MCA2/DST.html?model=scotland"><h3>Multi-Criteria Analysis</h3>
 				<p><img src="img/MCA_WCOS.PNG" class="img-thumbnail img-responsive center-block"></p></a>
-				<a href="dev/MCA2/DST.html?model=scotland_weighted.html"><h4>MCA with set priorities</h4>
-				<a href="dev/MCA2/DST.html?model=scotland_unweight.html"><h4>MCA without set priorities</h4>
-				<a href="dev/MCA2/DST.html?model=scotland_prev1.html"><h4>MCA with previous model outcomes and set priorities</h4>
+				<a href="dev/MCA2/DST.html?model=scotland_weighted"><h4>MCA with set priorities</h4>
+				<a href="dev/MCA2/DST.html?model=scotland_unweight"><h4>MCA without set priorities</h4>
+				<a href="dev/MCA2/DST.html?model=scotland_prev1"><h4>MCA with previous model outcomes and set priorities</h4>
 				
 				
 
