northSea: Add MCA data

--- a/north-sea.html
+++ b/north-sea.html
@@ -82,7 +82,7 @@ Pelagic fisheries might additionally be considered as a segment to study in grea
 			<div class="col-sm-6">
 				<a href="north-sea-Green_&#32;Model_instructions.html"><h3>Green Model</h3>
 				<p><img src="img/Rel-change-species.jpg" class="img-thumbnail img-responsive center-block"></p></a>
-				<a href="dev/MCA2/DST.html"><h3>Multi-Criteria Analysis</h3>
+				<a href="dev/MCA2/DST.html?model=northSea"><h3>Multi-Criteria Analysis</h3>
 				<p><img src="img/analysis.jpg" class="img-thumbnail img-responsive center-block"></p></a>
 				<h3>Management Scenarios</h3>
 				<p>Some management alternatives have been identified but they are still pending to be evaluated with the stakeholders (next meeting will be in November 2015)</p>
